--- a/contact-manager/package.json
+++ b/contact-manager/package.json
@@ -2,12 +2,14 @@
   "name": "contact-manager",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://antariksh17.github.io/react-front-to-back/contact-manager",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "bootstrap": "^5.2.0",
+    "gh-pages": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^4.3.1",
@@ -17,6 +19,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "deploy": "npm run build && gh-pages -d build ",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
