--- a/feedback-app/package.json
+++ b/feedback-app/package.json
@@ -1,23 +1,21 @@
 {
-  "name": "client-db",
+  "name": "feedback-app",
   "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "classnames": "^2.2.6",
-    "firebase": "^5.2.0",
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1",
-    "react-redux": "^5.0.7",
-    "react-redux-firebase": "^2.1.6",
-    "react-router-dom": "^4.3.1",
-    "react-scripts": "1.1.4",
-    "redux": "^4.0.0",
-    "redux-auth-wrapper": "^2.0.3",
-    "redux-firestore": "^0.5.7"
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.4.0",
+    "react-scripts": "5.0.1",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
+    "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -39,5 +37,3 @@
     ]
   }
 }
-
-
